tests/tooling/fixtures/native/execution/positive/binary_literal_global_initializer_chain.objc3
module BinaryLiteralGlobalInitializerChain;

let a = 0b101;
let b = a + 0b10;
let c = b << 0b1;

fn main() -> i32 {
  return c;
}
