tests/tooling/fixtures/native/execution/negative/misplaced_qualifier_expression_pure.objc3
module MisplacedQualifierExpressionPure;

fn main() -> i32 {
  return pure;
}